--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: sambarr@umich.edu
 url: sameerbarretto.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
-skills: "Computer Science"
+skills: "Computer Science at the University of Michigan"
 meta_author: Barretto Sameer
 
 # Google webmaster tools
