added tertiary color...
this is probably a bad idea...

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ color:
   primary-rgb: "80,182,187" #"24,288,156" #"128,179,255"
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
+  tertiary: ed3833
 
 # Footer settings
 footer:
