--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Sameer Barretto
 email: sambarr@umich.edu
 url: sameerbarretto.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
+description: "Hi, I'm Sameer Barretto, a Junior studying Computer Science at the University of Michigan. This is my personal webpage!"
+keywords: "Sameer Barretto, Sameer, Barretto, Michigan, Computer Science, Computers, Programming, MPowered"
 skills: "Computer Science at the University of Michigan"
 meta_author: Barretto Sameer
 
