--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: Ann Arbor, MI 48104
+  - line: Ann Arbor, MI, USA
   - line: Chennai, TN, India
 
 # Credits content
